--- a/style.css
+++ b/style.css
@@ -1,54 +1,105 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.page1{
+
+.page1 {
     width: 100%;
     height: 100vh;
     background-color: aquamarine;
 }
-.page2{
+
+.page2 {
     width: 100%;
     height: 100vh;
     background-color: palegoldenrod;
 }
-.page3{
+
+.page3 {
     width: 100%;
     height: 100vh;
     background-color: green;
 }
-.page4{
+
+.page4 {
     width: 100%;
     height: 100vh;
     background-color: yellow;
 }
-.page5{
+
+.page5 {
     width: 100%;
     height: 100vh;
     background-color: paleturquoise;
     overflow: hidden;
 }
 
-.page5 h1{
-   font-size: 40vw;
-   font-weight: 700;
-   font-family: 'Times New Roman', Times, serif; 
+.page5 h1 {
+    font-size: 40vw;
+    font-weight: 700;
+    font-family: 'Times New Roman', Times, serif;
 }
-.page6{
-      width: 100%;
+
+.page6 {
+    width: 100%;
     height: 100vh;
     background-color: black;
-    
+
 }
 
+.page7 {
+    width: 100%;
+    height: 100vh;
+    background-color: purple;
+}
+.page7 .custom_cursor{
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    background-color: white;
+    border-radius: 50%;
+    z-index: 1;
+}
+.page7 .img_box{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.page7 .img_box .img{
+    width: 600px;
+    height: 600px;
+    position: relative;
+    z-index: 0;
+}
 
-.box{
+.page7 .img_overlay{
+    position: absolute;
+    left: 0;
+    top: 0;
+    background:transparent;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+}
+
+.page7 .img_box .img img{
+    width: 100%;
+    height: 100%;
+}
+
+.box {
     width: 400px;
     height: 400px;
     background-color: red;
 }
-.page1, .page2, .page3, .page4{
+
+.page1,
+.page2,
+.page3,
+.page4 {
     display: flex;
     justify-content: center;
     align-items: center;
